import: Mr Sprite hacked up for the sprites in this project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 obj/
 xrick.sys16
 bmp/
+*.vpj
+*.vpw
+*.vpwhist
+*.vtg
+bin/mrsprite/.vs/
+bin/mrsprite/Debug/
+bin/mrsprite/dep/
+bin/mrsprite/lst/
+*.lst
+*.d
